Fix content jumping caused by disappearing reset button

--- a/client/styles/new-event.css
+++ b/client/styles/new-event.css
@@ -40,3 +40,7 @@ h1 {
   composes: heading;
   margin-top: 15px;
 }
+
+.reset-button {
+  min-height: 36px;
+}
